Fix recipe result overflow on some screen sizes, remove their borders

--- a/src/components/recipeResult.css
+++ b/src/components/recipeResult.css
@@ -1,8 +1,8 @@
 .result-link {
   color: #960014;
-  border: 10px solid #9FA8DF;
+  /* border: 10px solid #9FA8DF; */
   background-color: #FFE5DC;
-  height: 40rem;
+  /* height: 40rem; */
   padding: 15px;
   border-radius: 10px;
   text-decoration: none;
